(WIP) RSCMinus GUI (#4)
* make a jar for the scraper component of RSCMinus

* Copy Logger from RSC+ and add logo. Create Settings file.

* fix default verbosity level in settings and convert Scraper.java to use Logger. Add Sleepwords Opcode

* gui window is usable, but unfinished. need to refine the functions behind the buttons

* Stripper Window no longer locks up while processing keyboard.bin.gz, mouse.bin.gz, and metadata.bin are copied and handled LOG_VERBOSITY changed to not show Debug messages by default

* add Contribute Tab

* Text Changes

* cleanup StripperWindow

* remove checkbox for removing friendslist b/c important data is inside

* load images properly & add contribute icon

* fix stripping on Windows

* text change (explanation of ZLIB being too short exception)

* Text Changes

--- a/build.xml
+++ b/build.xml
@@ -3,11 +3,16 @@
 	<property name="build.dir" value="build" />
 	
 	<property name="dist.dir" value="dist" />
+	<property name="assets.dir" value="assets" />
 	<property name="bin.dir" value="bin" />
 
 	<property name="jar.main-class" value="rscminus.game.Server" />
 	<property name="jar.name" value="${ant.project.name}.jar" />
 	<property name="jar.file" value="${dist.dir}/${jar.name}" />
+
+	<property name="jar.main-class.scraper" value="rscminus.scraper.Scraper" />
+	<property name="jar.name.scraper" value="${ant.project.name}-scraper.jar" />
+	<property name="jar.file.scraper" value="${dist.dir}/${jar.name.scraper}" />
 
 	<path id="classpath">
 		<fileset dir="${basedir}">
@@ -17,7 +22,7 @@
 
 	<target name="compile">
 		<mkdir dir="${build.dir}" />
-		<javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false">
+		<javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false" encoding="UTF-8">
 			<classpath refid="classpath" />
 		</javac>
 	</target>
@@ -35,6 +40,17 @@
 				<attribute name="Main-Class" value="${jar.main-class}"/>
 			</manifest>
 			<fileset dir=".">
+				<include name="LICENSE" />
+			</fileset>
+			<zipfileset src="${build.dir}/deps.jar" excludes="META-INF/*.SF" />
+		</jar>
+
+		<jar destfile="${jar.file.scraper}" basedir="${build.dir}">
+			<manifest>
+				<attribute name="Main-Class" value="${jar.main-class.scraper}"/>
+			</manifest>
+			<fileset dir=".">
+				<include name="${assets.dir}/**" />
 				<include name="LICENSE" />
 			</fileset>
 			<zipfileset src="${build.dir}/deps.jar" excludes="META-INF/*.SF" />
