--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/bcpkix-jdk15on-159.jar"/>
 	<classpathentry kind="lib" path="lib/bcprov-jdk15on-159.jar"/>
 	<classpathentry kind="lib" path="lib/commons-compress-1.18.jar"/>
+    <classpathentry kind="lib" path="lib/jansi-1.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
