--- a/build.xml
+++ b/build.xml
@@ -3,16 +3,11 @@
 	<property name="build.dir" value="build" />
 	
 	<property name="dist.dir" value="dist" />
-	<property name="assets.dir" value="assets" />
 	<property name="bin.dir" value="bin" />
 
 	<property name="jar.main-class" value="rscminus.game.Server" />
 	<property name="jar.name" value="${ant.project.name}.jar" />
 	<property name="jar.file" value="${dist.dir}/${jar.name}" />
-
-	<property name="jar.main-class.scraper" value="rscminus.scraper.Scraper" />
-	<property name="jar.name.scraper" value="${ant.project.name}-scraper.jar" />
-	<property name="jar.file.scraper" value="${dist.dir}/${jar.name.scraper}" />
 
 	<path id="classpath">
 		<fileset dir="${basedir}">
@@ -22,7 +17,7 @@
 
 	<target name="compile">
 		<mkdir dir="${build.dir}" />
-		<javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false" encoding="UTF-8">
+		<javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false">
 			<classpath refid="classpath" />
 		</javac>
 	</target>
@@ -40,17 +35,6 @@
 				<attribute name="Main-Class" value="${jar.main-class}"/>
 			</manifest>
 			<fileset dir=".">
-				<include name="LICENSE" />
-			</fileset>
-			<zipfileset src="${build.dir}/deps.jar" excludes="META-INF/*.SF" />
-		</jar>
-
-		<jar destfile="${jar.file.scraper}" basedir="${build.dir}">
-			<manifest>
-				<attribute name="Main-Class" value="${jar.main-class.scraper}"/>
-			</manifest>
-			<fileset dir=".">
-				<include name="${assets.dir}/**" />
 				<include name="LICENSE" />
 			</fileset>
 			<zipfileset src="${build.dir}/deps.jar" excludes="META-INF/*.SF" />
